fpp_parser/src/tests/parse-error.ref.txt
error: syntax error
 --> [ local path prefix ]/parse-error.fpp:5:1
  |
5 | + c
  | ^ module member expected
  |
  = note: expected one of type, array, constant, enum, struct, component, active, passive, queued, interface, module, port, state, topology, include, locate
  = note: got +

error: syntax error
 --> [ local path prefix ]/parse-error.fpp:7:1
  |
7 | + c
  | ^ module member expected
  |
  = note: expected one of type, array, constant, enum, struct, component, active, passive, queued, interface, module, port, state, topology, include, locate
  = note: got +

error: syntax error
  --> [ local path prefix ]/parse-error.fpp:14:17
   |
14 |     async input i: d -> d
   |                 ^ unexpected token
   |
   = note: expected port
   = note: got identifier

error: syntax error
  --> [ local path prefix ]/parse-error.fpp:18:53
   |
18 |       ) severity warning low format "hello" throttle 1
   |  _____________________________________________________^
19 | |
   | |_^ unexpected end of file
   |
   = note: expected }
   = note: got eof

